# vicare-libesmtp

./: ANNOUNCE  Makefile.am  README  acinclude.m4  configure.ac
doc/: Makefile.am  macros.texi  vicare-libesmtp.texi
lib/: Makefile.am  compile-all.sps  compile-nausicaa.sps  dependencies.make  features.c  libraries.scm
lib/vicare/email/: libesmtp.vicare.sls
lib/vicare/email/libesmtp/: constants.vicare.sls.in  unsafe-capi.vicare.sls
lib/vicare/mail/: libesmtp.sls
lib/vicare/mail/libesmtp/: constants.sls.in  unsafe-capi.sls
src/: Makefile.am  vicare-libesmtp-auth.c  vicare-libesmtp-core.c  vicare-libesmtp-internals.h  vicare-libesmtp-version.c
tests/: Makefile.am  demo-for-documentation.sps  demo-for-plain-documentation.sps  test-vicare-libesmtp.sps
